[package]
name = "robotstatd"
description = "Publishes system statistics (CPU and memory usage) over MQTT"
homepage = "https://studentrobotics.org"
repository = "https://github.com/srobo/robotstatd"
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
paho-mqtt = "0.11.1"
sysinfo = "0.27.0"
